# PedagogicalSystemDesign

./: .gitignore  README.md
airflow_designer/: README.md  pyproject.toml
airflow_designer/airflow/: default.jinja2  simple_operator.py
airflow_designer/designer/: validator.py
airflow_designer/k8s/: minio.env
app/auction/: README.md  pyproject.toml
app/auction/app/: base.py  db.py  settings.py  static.py
app/auction/app/domain/auction/: crud.py  router.py
app/auction/app/domain/lot/: db.py
app/auction/app/domain/user/: db.py  router.py
app/auction/app/web/: auction.html  auth.html  header-footer.js
app/picture_storage/: Dockerfile  README.md  docker-compose.yaml
architecture_patterns/constructor/: chainer.py  server.py
architecture_patterns/context/: README.md
architecture_patterns/dependency_chain/: hook.py
architecture_patterns/sentinel/: README.md  server_sentinel.py  test.py
architecture_patterns/strategy/: README.md  spp.py
auction/: docker-compose.yaml
auction/app/: __init__.py  api.py  (+5 more)
dependency_chain/: README.md  hierachical.py  hook.py
front_back_interaction/: package-lock.json
front_back_interaction/chats/backend/: README.md  docker-compose.yaml  pyproject.toml  start.sh
front_back_interaction/chats/backend/nginx/: default.conf  keyclock.conf
front_back_interaction/chats/backend/src/: db.sqlite3
front_back_interaction/chats/backend/src/draw/: apps.py  task.py  views.py
front_back_interaction/chats/backend/src/emb_search/: apps.py  models.py  task.py  views.py
front_back_interaction/chats/backend/src/emb_search/migrations/: __init__.py
front_back_interaction/chats/backend/src/person/: models.py  serializers.py  urls.py  views.py
front_back_interaction/chats/backend/src/person/migrations/: 0001_initial.py
front_back_interaction/chats/backend/src/src/: asgi.py  settings.py  urls.py
front_back_interaction/chats/backend/src/story/: admin.py  models.py
front_back_interaction/chats/backend/src/trophy/: apps.py  models.py
front_back_interaction/chats/backend/src/webchat/: consumers.py  models.py  serializers.py  urls.py  views.py
front_back_interaction/chats/backend/src/webchat/migrations/: 0001_initial.py
front_back_interaction/chats/backend/src/webchat/templates/webchat/: index.html
front_back_interaction/chats/micro/chess/: Dockerfile  build.sh  pyproject.toml  test.py
front_back_interaction/chats/micro/chess/chess/: app.py
front_back_interaction/form/back/: pyproject.toml
front_back_interaction/form/back/airflow-graph/: CHANGELOG.md  README.md  package-lock.json  package.json
front_back_interaction/form/back/airflow-graph/src/: extension.ts
front_back_interaction/form/back/airflow-graph/web/: package-lock.json
front_back_interaction/form/back/backend/: __main__.py  api.py  datastruct.py
front_back_interaction/form/back/kafka/: __init__.py  api.py  datastruct.py
front_back_interaction/form/back/test/: faust.py
minio/: README>.md  docker-compose.yaml
sentinel/: main.py  test.py
static/: README.md  docker-compose.yaml  pyproject.toml
static/static/: __main__.py
static/test/: test.py
static/web/: decision.html  index.html  intro.html  listener.js
store/: Dockerfile  README.md  db  docker-compose.yaml  pyproject.toml
store/k8s/: .env  README.md  fastapi.yaml  postgres.yaml
store/store/: __init__.py  __main__.py  api.py  db_manager.py  db_model.py  settings.py
store/test/: analyst.py  chaining.py  conftest.py  db  fixture.py  store.py
tools/faust_event_managmnet/: Dockerfile  README.md  pyproject.toml
tools/faust_event_managmnet/app/: config_loader.py  faust.py  sqlalchemy.py
tools/kafka/: README.md  docker-compose.yaml  kafka_server_jaas.conf  pyproject.toml  zookeeper_jaas.conf
tools/kafka/kafka_cli/: __init__.py  __main__.py  io_utils.py  manager.py  settings.py
tools/kafka/kafka_cli/event/: datamodel.py  factory.py
tools/kafka/kafka_cli/io_kafka/: __init__.py  adapter.py  base.py  consumer.py  manager.py  pipeline.py  processor.py  producer.py  schema.py
tools/kafka/kafka_client/: cli.py
tools/kafka/settings/: kafka_server_jaas.conf  zookeper_jaas.conf
tools/kafka/tester/: __init__.py  __main__.py  base.py
tools/prometheus/: README.md  pyproject.toml
tools/prometheus/prom/: __main__.py  api.py
(+272 files in other folders)
