[tool.poetry]
name = "static"
version = "0.1.0"
description = ""
authors = ["Nikita"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.1"
pydantic = "^2.6.4"
uvicorn = "^0.29.0"
pydantic-settings = "^2.2.1"


[tool.poetry.scripts]
static = 'static.__main__:main'


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
