[tool.poetry]
name = "store"
version = "0.1.0"
description = ""
authors = ["Nikita"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
sqlalchemy = "^2.0.28"
mypy = "^1.9.0"
pydantic-settings = "^2.2.1"
uvicorn = "^0.29.0"
httpx = "^0.27.0"
psycopg2-binary = "^2.9.9"

[tool.poetry.scripts]
store = 'store.__main__:main'

[tool.poetry.group.dev.dependencies]
factory-boy = "^3.3.0"
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
