[tool.poetry]
name = "auction"
version = "0.1.0"
description = ""
authors = ["Nikita"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
redis = "^5.0.3"
sqlalchemy = "^2.0.29"
fastapi = "^0.110.0"
bcrypt = "^4.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
