[tool.poetry]
name = "event_managment"
version = "0.1.0"
description = ""
authors = ["Nikita"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
prometheus-client = "^0.20.0"
sqlalchemy = "^2.0.29"
configloader = {extras = ["all"], version = "^1.0.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
