[tool.poetry]
name = "kafka_cli"
version = "0.1.0"
description = ""
authors = ["Nikita"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11.0,<3.13.0"
confluent-kafka = "^2.3.0"
factory-boy = "^3.3.0"
pydantic-settings = "^2.2.1"
typer = "^0.12.2"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
