[tool.poetry]
name = "chess"
version = "0.1.0"
description = ""
authors = ["Nikita"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
stockfish = "^3.28.0"
fastapi = "^0.111.0"
uvicorn = "^0.29.0"
httpx = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = 'chess.app:start'
